[package]
name = "billion_meters_into_space"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    "x11",
    "png",
] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
