[package]
name = "billion_meters_into_space"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.13.1" }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
wasm-bindgen = "0.2.92"
